Addressing additional review feedback.

--- a/notebooks/learning-to-rank/01-learning-to-rank.ipynb
+++ b/notebooks/learning-to-rank/01-learning-to-rank.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/afoucret/elasticsearch-labs/blob/ltr-notebook/notebooks/learning-to-rank/01-learning-to-rank.ipynb)\n",
     "\n",
-    "In this notebook we will see example on how to train a Learning To Rank model using [XGBoost](https://xgboost.ai/) and how to deploy it to be used as a rescorer in Elasticsearch.\n",
+    "In this notebook we will see an example on how to train a Learning To Rank model using [XGBoost](https://xgboost.ai/) and how to deploy it to be used as a rescorer in Elasticsearch.\n",
     "\n",
     "\n",
     "**Notes about the Learning To Rank feature:**\n",
@@ -235,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loading the judgment list\n",
+    "## Loading the judegment list\n",
     "\n",
     "Judgemnent list provides human judgement that will be used to train our Learning To Rank model.\n",
     "\n",
@@ -726,7 +726,7 @@
     "    doc_features = feature_logger.extract_features(query_params, doc_ids)\n",
     "\n",
     "    # Adding a column to the dataframe for each features:\n",
-    "    for feature_index, feature_name in enumerate(feature_logger._model_config.feature_names):\n",
+    "    for feature_index, feature_name in enumerate(ltr_config.feature_names):\n",
     "        query_judgements_group[feature_name] = numpy.array([doc_features[doc_id][feature_index] for doc_id in doc_ids])\n",
     "\n",
     "    return query_judgements_group\n",
