--- a/notebooks/learning-to-rank/01-learning-to-rank.ipynb
+++ b/notebooks/learning-to-rank/01-learning-to-rank.ipynb
@@ -89,7 +89,7 @@
     }
    ],
    "source": [
-    "import getpass\n",
+    "from getpass import getpass\n",
     "from elasticsearch import Elasticsearch\n",
     "\n",
     "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#finding-your-cloud-id\n",
