Moving the notebook to search.

--- a/notebooks/search/08-learning-to-rank.ipynb
+++ b/notebooks/search/08-learning-to-rank.ipynb
@@ -121,7 +121,7 @@
     "\n",
     "In this example notebook we will use a dataset derived from [MSRD](https://github.com/metarank/msrd/tree/master) (Movie Search Ranking Dataset).\n",
     "\n",
-    "The dataset is available [here](https://github.com/elastic/elasticsearch-labs/tree/main//ltr-notebook/notebooks/learning-to-rank/sample_data/) and contains the following files:\n",
+    "The dataset is available [here](https://github.com/elastic/elasticsearch-labs/tree/main/ltr-notebook/notebooks/search/sample_data/learning-to-rank/) and contains the following files:\n",
     "\n",
     "- **movies_corpus.jsonl.gz**: The movies dataset which will be indexed.\n",
     "- **movies_judgements.tsv.gz**: A file containing relevance judgments for a set of queries.\n",
@@ -140,11 +140,11 @@
     "\n",
     "# TODO: use elastic/elasticsearch-labs instead of afoucret/elasticsearch-labs before merging the PR.\n",
     "\n",
-    "DATASET_BASE_URL = \"https://raw.githubusercontent.com/afoucret/elasticsearch-labs/ltr-notebook/notebooks/learning-to-rank/sample_data/\"\n",
+    "DATASET_BASE_URL = \"https://raw.githubusercontent.com/afoucret/elasticsearch-labs/ltr-notebook/notebooks/search/sample_data/learning-to-rank/\"\n",
     "\n",
-    "CORPUS_URL = urljoin(DATASET_BASE_URL, \"movies_corpus.jsonl.gz\")\n",
-    "JUDGEMENTS_FILE_URL = urljoin(DATASET_BASE_URL, \"movies_judgments.tsv.gz\")\n",
-    "INDEX_SETTINGS_URL = urljoin(DATASET_BASE_URL, \"movies_index_settings.json\")"
+    "CORPUS_URL = urljoin(DATASET_BASE_URL, \"movies-corpus.jsonl.gz\")\n",
+    "JUDGEMENTS_FILE_URL = urljoin(DATASET_BASE_URL, \"movies-judgments.tsv.gz\")\n",
+    "INDEX_SETTINGS_URL = urljoin(DATASET_BASE_URL, \"movies-index-settings.json\")"
    ]
   },
   {
