--- a/notebooks/search/08-learning-to-rank.ipynb
+++ b/notebooks/search/08-learning-to-rank.ipynb
@@ -44,9 +44,7 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: when eland 8.12.1 is released, we can avoid installing from github main:\n",
-    "!pip install -qU git+https://github.com/elastic/eland@main\n",
-    "!pip install -qU elasticsearch \"eland[scikit-learn]\" xgboost tqdm\n",
+    "!pip install -qU elasticsearch eland \"eland[scikit-learn]\" xgboost tqdm\n",
     "\n",
     "from tqdm import tqdm\n",
     "\n",
