Typo in qa-langchain-gemini-elasticsearch.ipynb
Fromat -> Format

--- a/notebooks/integrations/gemini/qa-langchain-gemini-elasticsearch.ipynb
+++ b/notebooks/integrations/gemini/qa-langchain-gemini-elasticsearch.ipynb
@@ -213,7 +213,7 @@
    "id": "3647d005-d70e-4c3a-b784-052b21e9f143",
    "metadata": {},
    "source": [
-    "## Fromat Docs"
+    "## Format Docs"
    ]
   },
   {
