--- a/notebooks/document-chunking/with-langchain-splitters.ipynb
+++ b/notebooks/document-chunking/with-langchain-splitters.ipynb
@@ -377,7 +377,7 @@
    "metadata": {},
    "source": [
     "### Perform a Nested Search\n",
-    "We can now perform a nested search, to find the passages that match our query, which will be returned in `inner_hits`."
+    "We can now perform a nested search, to find the passages that match our query, which will be returned in `inner_hits`. In the example that follows only one passage per parent document is requested."
    ]
   },
   {
@@ -478,6 +478,7 @@
     "  index=INDEX_NAME, \n",
     "  knn={\n",
     "    \"inner_hits\": {\n",
+    "      \"size\": 1,\n",
     "      \"_source\": False,\n",
     "      \"fields\": [\n",
     "        \"passages.text\"\n",
@@ -644,7 +645,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
